--- a/README.rdoc
+++ b/README.rdoc
@@ -20,6 +20,10 @@ times faster at decoding large attachments if you us ruby 1.9 instead of 1.8.
 
 Version 0.0.11
 
+* Convert the subject to utf-8
+
+Version 0.0.11
+
 * A message object from the mail gem library may now be passed to parse
 
 Version 0.0.10
